DT2038 stockholm fix for clear search button alignment

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -12,6 +12,13 @@
     height: 44px;
 }
 
+
+// Search Clear
+.ecomproductslist__button--clear {
+    margin-top: 33px;
+}
+
+
 // Legend
 .ecomproductslist__legend {
     display: none;
